// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Meeting Custom Controls 1`] = `
<div
  style={
    Object {
      "height": "500px",
      "width": "650px",
    }
  }
>
  <div
    className="wxc-meeting wxc-meeting-active"
  >
    <div
      className="wxc-in-meeting"
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
    </div>
    <div
      className="wxc-meeting-controls meeting-controls-container"
    >
      <button
        alt="Leave"
        aria-label="Leave"
        aria-pressed={null}
        className="md-button md-button--circle md-button--56 md-button--red"
        data-md-event-key="md-button-5"
        disabled={false}
        id="md-button-5"
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "style": Object {},
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="md-button__children"
          style={
            Object {
              "opacity": "1",
            }
          }
        >
          <i
            aria-label={null}
            className="md-icon icon icon-cancel_28"
            style={
              Object {
                "fontSize": 28,
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Meetings/Webex Meeting Interstitial 1`] = `
<div
  style={
    Object {
      "height": "500px",
      "width": "650px",
    }
  }
>
  <div
    className="wxc-meeting wxc-meeting-active"
  >
    <div
      className="wxc-in-meeting"
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <h4>
          Waiting for others to join...
        </h4>
      </div>
      <div
        className="wxc-local-media local-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
    </div>
    <div
      className="wxc-meeting-controls meeting-controls-container"
    >
      <button
        alt="Mute"
        aria-label="Mute"
        aria-pressed={null}
        className="md-button md-button--circle md-button--56"
        data-md-event-key="md-button-1"
        disabled={false}
        id="md-button-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "style": Object {},
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="md-button__children"
          style={
            Object {
              "opacity": "1",
            }
          }
        >
          <i
            aria-label={null}
            className="md-icon icon icon-microphone-muted_28"
            style={
              Object {
                "fontSize": 28,
              }
            }
          />
        </span>
      </button>
      <button
        alt="Stop video"
        aria-label="Stop video"
        aria-pressed={null}
        className="md-button md-button--circle md-button--56"
        data-md-event-key="md-button-2"
        disabled={false}
        id="md-button-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "style": Object {},
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="md-button__children"
          style={
            Object {
              "opacity": "1",
            }
          }
        >
          <i
            aria-label={null}
            className="md-icon icon icon-camera-muted_28"
            style={
              Object {
                "fontSize": 28,
              }
            }
          />
        </span>
      </button>
      <button
        alt="Start Sharing"
        aria-label="Start Sharing"
        aria-pressed={null}
        className="md-button md-button--circle md-button--56"
        data-md-event-key="md-button-3"
        disabled={false}
        id="md-button-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "style": Object {},
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="md-button__children"
          style={
            Object {
              "opacity": "1",
            }
          }
        >
          <i
            aria-label={null}
            className="md-icon icon icon-share_28"
            style={
              Object {
                "fontSize": 28,
              }
            }
          />
        </span>
      </button>
      <button
        alt="Leave"
        aria-label="Leave"
        aria-pressed={null}
        className="md-button md-button--circle md-button--56 md-button--red"
        data-md-event-key="md-button-4"
        disabled={false}
        id="md-button-4"
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "style": Object {},
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="md-button__children"
          style={
            Object {
              "opacity": "1",
            }
          }
        >
          <i
            aria-label={null}
            className="md-icon icon icon-cancel_28"
            style={
              Object {
                "fontSize": 28,
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Meetings/Webex Meeting Loading 1`] = `
<div
  style={
    Object {
      "height": "500px",
      "width": "650px",
    }
  }
>
  <div
    className="wxc-meeting"
  >
    <i
      className="md-spinner md-spinner--36 md-spinner--black"
    />
  </div>
</div>
`;
